Add rough drafts of model, repository,controller and service

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version> <!-- Version supporting Java 21 -->
+				<configuration>
+					<source>21</source> <!-- Java 21 -->
+					<target>21</target> <!-- Java 21 -->
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
