--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:sqlite:books.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=9000
