Endpoints working, add constraints, refactor according to specs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=bookapi
 
+# DataSource config
 spring.datasource.url=jdbc:sqlite:books.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+
+#Hibernate and JPA config
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
+#Server port as requested
 server.port=9000
+
+#Enable bean validation error messages
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
