--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>fi.korpi</groupId>
 	<artifactId>bookapi</artifactId>
@@ -54,17 +54,17 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>6.6.1.Final</version>
+    		<groupId>org.hibernate.orm</groupId>
+    		<artifactId>hibernate-community-dialects</artifactId>
+    		<version>6.6.1.Final</version>		
 		</dependency>
 
 		<dependency>
-    		<groupId>org.hibernate.orm</groupId>
-    		<artifactId>hibernate-community-dialects</artifactId>
-    	<version>6.6.1.Final</version>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
 
-</dependency>
 
 	</dependencies>
 
@@ -74,10 +74,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version> <!-- Version supporting Java 21 -->
+				<version>3.10.1</version> 
 				<configuration>
-					<source>21</source> <!-- Java 21 -->
-					<target>21</target> <!-- Java 21 -->
+					<source>21</source> 
+					<target>21</target> 
 				</configuration>
 			</plugin>
 			
